# SecuCert-Monitor

./: .gitignore  README-DEV.md  README.md  config.py  deal_package.py  exts.py  requirements.txt  run.py
app/: __init__.py  controller.py  models.py  views.py
backend/: .env  .env.example  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  certificates.py  health.py  schemas.py  stats.py
backend/app/models/: __init__.py  certificate.py  notification_log.py
backend/app/services/: __init__.py  notification_service.py
backend/app/tasks/: __init__.py  scheduler.py
backend/scripts/: clear_notifications.py  init_db.py  seed.py  test_dingtalk.py  trigger_notification.py
docs/superpowers/specs/: 2026-03-26-backend-design.md  2026-03-26-frontend-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/api/: certificates.ts  client.ts  stats.ts
frontend/src/assets/styles/: main.scss
frontend/src/components/: StatusBadge.vue
frontend/src/router/: index.ts
frontend/src/stores/: certificate.ts
frontend/src/types/: certificate.ts
frontend/src/utils/: date.ts  format.ts
frontend/src/views/: CertificateDetailView.vue  CertificateListView.vue  DashboardView.vue
sql/: expiration_monitor.sql
static/css/: cpu.css
static/js/: controller.js  cpu.js
templates/: alert_table.html  base.html  screen.html  table.html
utils/: LogHandler.py  ding_send.py  mysql_tools.py  time_tools.py
